# High-Throughput-Ingestion-Engine-in-Go-Rust

./: .gitignore  README.md  docker-compose.yml  go.work  go.work.sum  go_metrics.csv  run_benchmark.sh  rust_metrics.csv  visualize_benchmarks.py
data-generator/: go.mod  main.go
db-init/: init.sql
gateway-service/: go.mod  go.sum  main.go
gateway-service/pb/: transaction.pb.go  transaction_grpc.pb.go
go-consumer/: go.mod  go.sum  main.go
proto/: transaction.proto
rust-consumer/: Cargo.toml
rust-consumer/src/: main.rs
