[package]
name = "rust-consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-channel = "2.3"
num_cpus = "1.16"